--- a/client/src/components/styles/SearchBar.css
+++ b/client/src/components/styles/SearchBar.css
@@ -1,52 +1,76 @@
-.search-bar-container {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    margin: 10px;
-    justify-content: flex-start;
+*{
+    box-sizing: border-box;
+}
+
+.search-box{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    /* margin-top: 5px; */
+}
+.input-search{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;  
+    height: 50px;
+    width: 50px;
+    border-style: none;
+    padding: 10px;
+    font-size: 15px;
+    outline: none;
+    border-radius: 25px;
+    transition: all .5s ease-in-out;
+    /* background-color: #02264d; */
+    padding-right: 40px;
+    color:#fff;
+}
+
+.input-search:hover {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 300px;
-    height: 30px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+  
+.input-search::placeholder{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:rgba(255,255,255,.5);
+    font-size: 12px;
+    font-weight: 100;
 }
 
-.search-bar-submit {
-    display: flex;
-    margin: 7px;
-    border-radius: 5px;
-    border: 2px solid #02264d;    
-    text-decoration: none;
-    background-color: rgba(255, 255, 255, 0.911);
-    color: #02264d;
-    width: 77px;
-    height: 38px;
-    margin-top: 18px;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
+.btn-search{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 40px;
+    height: 40px;
+    border-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
     cursor: pointer;
+    border-radius: 50%;
+    position: absolute;
+    right: 0px;
+    color:#ffffff ;
+    background-color:transparent;
+    pointer-events: painted;  
+}
+
+.btn-search:hover ~ .input-search{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 
-.search-bar-submit:hover, .search-bar-submit:active, .search-bar-submit:focus {
-    background-color: #02264d;
-    color: #fff;
+.input-search:focus{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
-
-.search-bar-input {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 281px;
-    height: 35px;
-    margin: 2px;
-    margin-top: 15px;
-    border-radius: 5px;
-    border: 2px solid rgba(34, 34, 34, 0.747);
-}
-
-.search-bar-label {
-    display: flex;
-    margin: 2px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
